kubernetes/apps/network/envoy-gateway/app/envoy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.plygrnd.org
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: external.plygrnd.org
      lbipam.cilium.io/ips: "10.10.10.63"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: plygrnd-org-tls
          - kind: Secret
            name: gitwatch-dev-tls
          - kind: Secret
            name: lukehagar-com-tls
          - kind: Secret
            name: openapi-gg-tls
          - kind: Secret
            name: openapi-info-tls
          - kind: Secret
            name: parke-dev-tls
          - kind: Secret
            name: pypistats-dev-tls
          - kind: Secret
            name: batonapp-dev-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.plygrnd.org
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: internal.plygrnd.org
      lbipam.cilium.io/ips: "10.10.10.61"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: plygrnd-org-tls
          - kind: Secret
            name: gitwatch-dev-tls
          - kind: Secret
            name: lukehagar-com-tls
          - kind: Secret
            name: openapi-gg-tls
          - kind: Secret
            name: openapi-info-tls
          - kind: Secret
            name: parke-dev-tls
          - kind: Secret
            name: pypistats-dev-tls
          - kind: Secret
            name: batonapp-dev-tls
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compression:
    - type: Brotli
    - type: Gzip
  connection:
    bufferLimit: 8Mi
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: http
    - name: internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
